--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,16 @@
 
 body {
   position: relative;
-  font-family: Montserrat;
   font-weight: normal;
   background-color: #faf8f2;
+}
+
+html[dir="rtl"] body {
+  font-family: IBM;
+}
+
+html[dir="ltr"] body {
+  font-family: Montserrat;
 }
 
 body::-webkit-scrollbar {
@@ -182,6 +189,62 @@ input[type=number] {
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-Thin.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-Thin.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-ExtraLight.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-ExtraLight.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-Light.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-Light.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM Text';
+  src: url("../fonts/IBM/IBMPlexSansArabic-Text.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-Text.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-Text.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-Medium.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-Medium.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-SemiBold.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-SemiBold.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM';
+  src: url("../fonts/IBM/IBMPlexSansArabic-Bold.woff2") format("woff2"), url("../fonts/IBM/IBMPlexSansArabic-Bold.woff") format("woff"), url("../fonts/IBM/IBMPlexSansArabic-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 .search-icon.active i::before {
   content: "\f00d";
 }
@@ -198,7 +261,6 @@ input[type=number] {
 .search-form-cont::after {
   position: absolute;
   top: 0;
-  right: 0;
   bottom: 0;
   content: "";
   width: 50%;
@@ -206,13 +268,29 @@ input[type=number] {
   z-index: 1;
 }
 
+html[dir="rtl"] .search-form-cont::after {
+  left: 0;
+}
+
+html[dir="ltr"] .search-form-cont::after {
+  right: 0;
+}
+
 .search-form {
   width: 88%;
   position: relative;
-  margin-left: auto;
   z-index: 2;
-  border-radius: 0px 0px 0px 15px;
   overflow: hidden;
+}
+
+html[dir="rtl"] .search-form {
+  margin-right: auto;
+  border-radius: 0px 0px 15px 0px;
+}
+
+html[dir="ltr"] .search-form {
+  margin-left: auto;
+  border-radius: 0px 0px 0px 15px;
 }
 
 @media (max-width: 1199px) {
@@ -231,44 +309,55 @@ input[type=number] {
   width: 100%;
   height: 68px;
   color: #faf8f2;
-  padding-left: 30px;
-  padding-right: 60px;
   font-size: 24px;
-  border-radius: 0px 0px 0px 15px;
   background-color: #05526e;
   border: none;
   font-weight: 500;
+}
+
+html[dir="rtl"] .search-input {
+  padding-right: 30px;
+  padding-left: 60px;
+  border-radius: 0px 0px 15px 0px;
+}
+
+html[dir="ltr"] .search-input {
   font-style: italic;
+  padding-left: 30px;
+  padding-right: 60px;
+  border-radius: 0px 0px 0px 15px;
 }
 
 .search-input::-webkit-input-placeholder {
   color: #6397aa;
   font-weight: 400;
-  font-style: italic;
 }
 
 .search-input:-ms-input-placeholder {
   color: #6397aa;
   font-weight: 400;
-  font-style: italic;
 }
 
 .search-input::-ms-input-placeholder {
   color: #6397aa;
   font-weight: 400;
-  font-style: italic;
 }
 
 .search-input::placeholder {
   color: #6397aa;
   font-weight: 400;
-  font-style: italic;
 }
 
 @media (max-width: 991px) {
   .search-input {
     height: 46px;
     font-size: 16px;
+  }
+  html[dir="rtl"] .search-input {
+    padding-right: 16px;
+    padding-left: 35px;
+  }
+  html[dir="ltr"] .search-input {
     padding-left: 16px;
     padding-right: 35px;
   }
@@ -279,7 +368,6 @@ input[type=number] {
   top: 50%;
   -webkit-transform: translateY(-50%) scaleX(-1);
           transform: translateY(-50%) scaleX(-1);
-  right: 0;
   color: #faf8f2;
   font-size: 36px;
   border: none;
@@ -292,6 +380,14 @@ input[type=number] {
   background-color: transparent;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+}
+
+html[dir="rtl"] .search-btn {
+  left: 0;
+}
+
+html[dir="ltr"] .search-btn {
+  right: 0;
 }
 
 .search-btn:hover, .search-btn:focus {
@@ -336,6 +432,34 @@ nav {
 .mo-navbar a:hover, .mo-navbar a:focus {
   color: #f3743d;
   text-decoration: none;
+}
+
+html[dir="rtl"] .lang {
+  font-family: Montserrat;
+}
+
+html[dir="rtl"] .lang a {
+  font-size: 14px;
+}
+
+@media (max-width: 991px) {
+  html[dir="rtl"] .lang a {
+    font-size: 24px;
+  }
+}
+
+html[dir="ltr"] .lang {
+  font-family: IBM;
+}
+
+html[dir="ltr"] .lang a {
+  font-size: 15px;
+}
+
+@media (max-width: 991px) {
+  html[dir="ltr"] .lang a {
+    font-size: 24px;
+  }
 }
 
 .products-slider {
@@ -488,8 +612,6 @@ main {
   margin: 0;
   font-size: 48px;
   color: #014760;
-  font-family: 'Arvo';
-  font-weight: 700;
   text-transform: uppercase;
   line-height: 1.2;
   margin-bottom: 22px;
@@ -499,6 +621,15 @@ main {
   .main-title {
     font-size: 36px;
   }
+}
+
+html[dir="rtl"] .main-title {
+  font-weight: 900;
+}
+
+html[dir="ltr"] .main-title {
+  font-family: 'Arvo';
+  font-weight: 700;
 }
 
 .main-desc {
@@ -948,9 +1079,16 @@ header {
 .logo img {
   position: absolute;
   top: 0;
-  left: 0;
   height: 168px;
   width: auto;
+}
+
+html[dir="rtl"] .logo img {
+  right: 0;
+}
+
+html[dir="ltr"] .logo img {
+  left: 0;
 }
 
 @media (max-width: 991px) {
